Fix overflow sizing on mobile devices (using mobile-first CSS approach)

--- a/src/components/WordType/index.css
+++ b/src/components/WordType/index.css
@@ -13,7 +13,7 @@
 	margin-bottom: 1em;
 
 	text-align: center;
-	font-size: 6vmin;
+	font-size: 2.5em;
 	font-weight: 700;
 	color: #222;
 }
@@ -31,17 +31,28 @@
 }
 
 .word-input__input {
-	width: 35vw;
+	width: 90vw;
+	margin: 0 auto;
 	border: none;
 	box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.02);
 	padding: 1.25em 1.25em;
 	background-color: #fafafa;
 
-	font-size: 3vmin;
+	font-size: 1.5em;
 	color: #333;
 }
 
 .word-input__input:hover,
 .word-input__input:focus {
 	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.04);
+}
+
+@media (min-width: 769px) {
+	.word-input__label {
+		font-size: 3em;
+	}
+
+	.word-input__input {
+		width: 35vw;
+	}
 }
